BD-2004-05-19-0: Cleanup:   Clean up configure related files in qmake
                            and qtcsh so configure generates useful
                            output.
                 Changed:   qmake, qtcsh

AD-2004-05-19-0: Bugfix:    - Did eradicate global 'Master_Config_List'.
                              Qmaster configuration module now does use a
                              module local list, which is properly synchronized.
                            - Did streamline Qmaster configuration module
                              interface.
                 Issue:     1041
                 Changed:   qmaster, execd, evm, sgeobj, spool
                 Review:    pending

JG-2004-05-19-1: Bugfix:    Fixed broken qdel -f output (see also IZ 664).
                 Cleanup:   Removed job_log from execd and scheduler.
                 Changed:   qmaster, schedd, execd
                 Review:    SG

MD-2004-05-19-0: Bugfix:    - Upgrade Welcome Text
                            - inst_template comments
                            - autoinst always used default schedd config
                 Changed:   inst_sge

AA-2004-05-19-0: Bugfix:    - warning when execd is started as non-root user
                            - make csp work with admin user daemons
                            - change of motif lib for pippin
                 Issue:     857
                 Changed:   all bins
                 Review:    pending
                            
CR-2004-05-19-0: Bugfix:    o Removed -lj Option for execd
                            o added/fixed help output to sge_execd, sge_qmaster
                              sge_shepherd and sge_coshepherd (IZ#1026).
                            o fixed bug in when host_aliases are active 
                              (all mapped host names had to be resolvable on 
                               local host, now mapped names must not be real
                               resolveable host names )