@@ -1,3 +1,5 @@
+BD-2004-05-19-1: Enhamcem:  - allow compilation on FreeBSD
+
 BD-2004-05-19-0: Cleanup:   Clean up configure related files in qmake
                             and qtcsh so configure generates useful
                             output.
